tests/baselines/reference/YieldExpression5_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/yieldExpressions/YieldExpression5_es6.ts(3,1): error TS1109: Expression expected.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/yieldExpressions/YieldExpression5_es6.ts (1 errors) ====
    function* foo() {
      yield*
    }
    ~
!!! error TS1109: Expression expected.